--- a/wp-content/themes/theskybakery-theme/assets/css/main.css
+++ b/wp-content/themes/theskybakery-theme/assets/css/main.css
@@ -766,8 +766,8 @@ section {
 }
 
 .store-name {
-    font-size: 24px;
-    color: var(--primary-color);
+    font-size: 24px !important;
+    color: #623a32;
     margin-bottom: 25px;
 }
 
